--- a/views/admin/dashboard.pug
+++ b/views/admin/dashboard.pug
@@ -27,6 +27,11 @@ block content
 								- var uptime = moment.duration(new Date().getTime() - appStartTime);
 								span #{uptime.format()}
 
+						div.row
+							div.summary-table-label Node Version
+							div.summary-table-content.text-monospace
+								span #{global.nodeVersion}
+
 			div.card.shadow-sm.mb-3
 				div.card-body
 					h3.h6 App Config
@@ -106,6 +111,14 @@ block content
 														small  %
 												else
 													span -
+
+			div.card.shadow-sm.mb-3
+				div.card-body
+					h3.h6 Cache Sizes
+					hr
+
+					pre
+						code.json #{JSON.stringify(cacheSizes, null, 4)}
 
 			div.card.shadow-sm.mb-3
 				div.card-body
